Habilitar el video

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     
                 </article>
                 <div id="rocky-video">                     
-                    <!--<video width="550" height="350" id="rocky-video" controls >
+                    <video width="550" height="350" id="rocky-video" controls >
                         <source src="./videos/rocky_motivacion.mp4" type="video/mp4"> 
-                    </video>-->
+                    </video>
                 </div>
             </div>
         </section>
